istio/k8s/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  labels:
    app: ui-service
  namespace: istio-ws
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: ui-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    sidecar.istio.io/extraStatTags: destination_port,request_host
  name: ui-service
  labels:
    app: ui-service
  namespace: istio-ws
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui-service
      appVersion: v1
  template:
    metadata:
      labels:
        app: ui-service
        appVersion: v1
    spec:
      containers:
      - name: ui-service
        image: idzik/istio-ui-service:v1
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    sidecar.istio.io/extraStatTags: destination_port,request_host
  name: ui-service-v2
  labels:
    app: ui-service
    appVersion: v2
  namespace: istio-ws
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui-service
      appVersion: v2
  template:
    metadata:
      labels:
        app: ui-service
        appVersion: v2
    spec:
      containers:
      - name: ui-service
        image: idzik/istio-ui-service:v2
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
