istio/k8s/destination-rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: quote-service
  namespace: istio-ws
spec:
  host: quote-service
  subsets:
  - name: v1
    labels:
      appVersion: v1
  - name: v2
    labels:
      appVersion: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ui-service
  namespace: istio-ws
spec:
  host: ui-service
  subsets:
  - name: v1
    labels:
      appVersion: v1
  - name: v2
    labels:
      appVersion: v2
